@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: boardpos.c,v 1.3 2003/08/24 20:40:29 oysteijo Exp $
+ * $Id: boardpos.c,v 1.4 2003/09/06 09:37:50 thyssen Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -94,8 +94,8 @@ PointArea( const int fClockwise, const int nSize,
 
 extern void
 CubePosition( const int crawford_game, const int cube_use,
-              const int doubled, const int cube_owner,
-              int *px, int *py, int *porient ) {
+              const int doubled, const int turn, 
+              const int cube_owner, int *px, int *py, int *porient ) {
 
     if( crawford_game || !cube_use ) {
 	/* no cube */
@@ -103,13 +103,14 @@ CubePosition( const int crawford_game, const int cube_use,
 	if( py ) *py = -32768;
 	if( porient ) *porient = -1;
     } else if( doubled ) {
-	if( px ) *px = 50 - 25 * doubled;
-	if( py ) *py = 37;
-	if( porient ) *porient = doubled;
+      int fac = ( ! cube_owner || cube_owner == turn ) ? -1 : +1;
+      if( px ) *px = 50 + fac * turn  * 25;
+      if( py ) *py = 37;
+      if( porient ) *porient = - fac * turn;
     } else {
 	if( px ) *px = 50;
-	if( py ) *py = 37 - 34 * cube_owner;
-	if( porient ) *porient = cube_owner;
+	if( py ) *py = 37 + 34 * cube_owner;
+	if( porient ) *porient = - cube_owner;
     }
 
 }
